Create page about

--- a/css/skin.css
+++ b/css/skin.css
@@ -2670,3 +2670,10 @@ body.lightgreen #features-page .right-section {
 body.lightgreen #login-reg .form-box .btn {
 	background-color: #b4de50;
 }
+.social_links > li {
+    font-size: 2rem;
+    margin: .5rem;
+}
+ul.social_links {
+    display: flex;
+}
